# ritm

./: CNAME  gui.js  index.html
.github/workflows/: deploy-dev.yml  deploy-main-gh.yml  deploy.yml  rust.yml
gui/: Cargo.toml  Trunk.toml
gui/locales/: en.yml  fr.yml
gui/src/: app.rs  error.rs  lib.rs  main.rs  turing.rs  ui.rs
gui/src/ui/: code.rs  component.rs  constant.rs  control.rs  edit.rs  font.rs  graph.rs  iteration_tree.rs  menu.rs  popup.rs  ribbon.rs  settings.rs  tape.rs  theme.rs  tutorial.rs  utils.rs
gui/src/ui/component/: grid.rs
gui/src/ui/graph/: state.rs  transition.rs
gui/src/ui/popup/: help.rs  settings.rs  state_edit.rs  transition_edit.rs
ritm_core/: Cargo.toml
ritm_core/resources/: 0n1n.tm  0n1n_multiple_tape.tm  1=0.tm  equal_size_words.tm  new.tm  number2.tm  one_ribbon.tm  turing3.tm  turing4.tm  turing7.tm  turing_test.tm  twice_size.tm
ritm_core/src/: lib.rs  turing_graph copy.rs  turing_graph.rs  turing_index.rs  turing_machine.pest  turing_machine.rs  turing_parser.rs  turing_state copy.rs  turing_state.rs  turing_tape.rs  turing_transition.rs
ritm_core/tests/: parser_test.rs  turing_graph_test.rs  turing_machine_test.rs  turing_state_test.rs  turing_transitions_test.rs
ritm_repl/: README.md
ritm_repl/src/: lib.rs  ripl_error.rs
ritm_repl/src/modes/: choice_modes.rs  execute_mode.rs  modify_mode.rs  starting_modes.rs
